--- a/src/app/pages/planification/detail-estimation/feuille-course/feuille-course.component.html
+++ b/src/app/pages/planification/detail-estimation/feuille-course/feuille-course.component.html
@@ -8,7 +8,7 @@
 
   <div style="padding-top: 100px; padding-left: 50px; padding-right: 50px;" id="invoice">
     <div style="text-align: center; align-items:center; justify-content: center;">
-        <h2 > 
+        <h2 >
             Feuille de course
         </h2>
     </div>
@@ -16,8 +16,8 @@
     <div class="currency" style="text-align: center; margin-top: 5px;">
         Devise : FCFA
     </div>
-    
-    <table style="margin-bottom: 35px;"> 
+
+    <table style="margin-bottom: 35px;">
         <thead>
             <tr>
                 <th>Ingrédient</th>
@@ -28,21 +28,21 @@
         </thead>
         <tbody>
             <tr *ngFor="let detail of detailRecipeList" >
-                <td>{{detail?.ingredient?.name}}</td>
-                <td>{{detail.stockApres }}</td>
-                <td>{{detail?.ingredient?.price}}</td>
-                <td appPriceFormater [priceValue]="detail.totalPrice| number: '.0-0'"></td>
+                <td>{{detail?.product?.name}}</td>
+                <td>{{ (-1) * detail.currentStock }}</td>
+                <td>{{ detail?.product?.price }}</td>
+                <td appPriceFormater [priceValue]=" ( (-1) * detail.currentStock * detail?.product?.price )| number: '.0-0'"></td>
             </tr>
-            
+
             <tr class="total-row">
                 <th colspan="3" style="text-align: left;">Total</th>
-                <th appPriceFormater [priceValue]="total | number: '.0-0'">/th>
+                <th appPriceFormater [priceValue]="((-1) * total) | number: '.0-0'">/th>
             </tr>
         </tbody>
     </table>
 
 
-    <div style="text-align: center;" class="bouttonn"> 
+    <div style="text-align: center;" class="bouttonn">
         <p-button (onClick)="generate()" label="Imprimer" icon="pi pi-print" />
     </div>
 </div>
